--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.24.1",
     "scroll-lock": "^2.1.5"
   },
