--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^9.108.4",
+    "@react-three/fiber": "^8.16.8",
     "framer-motion": "^11.3.4",
+    "maath": "^0.10.8",
     "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.24.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "scroll-lock": "^2.1.5",
     "swiper": "^11.1.5"
   },
