--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
+    "@tsparticles/all": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
     "framer-motion": "^11.3.4",
     "maath": "^0.10.8",
     "npm": "^10.8.2",
